<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/itmGoalSetingsPage"
        android:icon="@drawable/goal_setting"
        android:title="@string/goalSettings" />
    <item android:id="@+id/itmAnnualReportPage"
        android:icon="@drawable/annually_report"
        android:title="@string/annualReport" />
    <item android:id="@+id/itmMonthlyReportPage"
        android:icon="@drawable/monthly_report"
        android:title="@string/monthlyReport" />
    <item android:id="@+id/itmDoctorNotePage"
        android:icon="@drawable/doc_note"
        android:title="@string/doctorNote" />
    <item android:id="@+id/itmExerciseList"
        android:icon="@drawable/exercise_timer"
        android:title="@string/exercises_list" />
    <item android:id="@+id/itmStepCounter"
        android:icon="@drawable/pedometer"
        android:title="Step Counter" />
    <item android:id="@+id/itmFavFoodPage"
        android:icon="@drawable/food_recipes"
        android:title="@string/favoriteFood" />
    <item android:id="@+id/itmFoodRecom"
        android:icon="@drawable/food_ideas"
        android:title="@string/foodRecommendations" />
    <item android:id="@+id/itmRestrictedFoodPage"
        android:icon="@drawable/restricted_foods"
        android:title="@string/restrictedFood" />
    <item android:id="@+id/itmHeartRatePage"
        android:icon="@drawable/heart_exercise"
        android:title="@string/heartRate" />
    <item android:id="@+id/itmCaloriesTrackerPage"
        android:icon="@drawable/calories_tracker"
        android:title="@string/caloriesTracker" />
    <item android:id="@+id/itmDietPlanPage"
        android:icon="@drawable/diet_plan"
        android:title="@string/dietPlan" />
    <item android:id="@+id/itmDailyChartPage"
        android:icon="@drawable/progress_dashboard"
        android:title="@string/dailyChart" />
    <item android:id="@+id/itmWeeklyChartPage"
        android:icon="@drawable/weekly_report"
        android:title="@string/weeklyChart" />
    <item android:id="@+id/itmExercisesPage"
        android:icon="@drawable/heart_exercises"
        android:title="@string/exercises" />
    <item android:id="@+id/itmWeightTrackingPage"
        android:icon="@drawable/weight_tracking"
        android:title="@string/weightTracking" />
    <item android:id="@+id/itmFoodLogPage"
        android:icon="@drawable/food_log"
        android:title="@string/foodLog" />
    <item android:id="@+id/itmBMIPage"
        android:icon="@drawable/bmi_chart"
        android:title="@string/BMI" />
    <item android:id="@+id/itmFoodRecipesPage"
        android:icon="@drawable/food_recipes"
        android:title="@string/foodRecipes" />
</menu>