<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".foods.FilterFood">

    <LinearLayout
        android:id="@+id/linearLayoutFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabetical_sorting_label"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/alphaAscending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_ascending"
                android:layout_marginTop="20dp"/>

            <RadioButton
                android:id="@+id/alphaDescending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_descending"
                android:layout_marginTop="20dp"/>

        </RadioGroup>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button_fragment"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</FrameLayout>