<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".diet.DietPlanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_diet_plan"
        android:textColor="@color/orangeIsh"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingTop="60dp"
        android:paddingBottom="-60dp"
        android:scrollbars="horizontal|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/table_cells_white_rows"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.153">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/table_cells_column_titles">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/time_of_the_day_n_day_of_the_week"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/monday"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/tuesday"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/wednesday"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10sp"
                        android:paddingEnd="10dp"
                        android:text="@string/thursday"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/friday"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/saturday"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_cells_column_titles"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/sunday"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>